<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".scrollview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/know"
                android:layout_width="216dp"
                android:layout_height="56dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/information"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/know"
                android:text="@string/ENGLISH"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/article1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article"
                android:text="@string/MARATHI"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/article2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article1"
                android:text="@string/HINDI"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YogaLink"
                android:textColorLink="@color/cardview_light_background"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>




        </LinearLayout>
    </RelativeLayout>






</ScrollView>




